STERI016-451: Alignment Issues - Why Choose Shred-it & (#850)
* STERI016-451-alignment-am: Fix alignment issue by center-aligning text and icon.

* STERI016-451-alignment-am: Fix button alignment issue.

--- a/blocks/columns/default.css
+++ b/blocks/columns/default.css
@@ -430,7 +430,7 @@ main .section.columns-container .block.columns.columns-2-cols.icon-list > div > 
 }
 
 /* Center Content */
-main .section.centered-text.columns-container .default-content-wrapper p.button-container {
+main .section.columns-container .columns.centered-text > div > div > p.button-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -438,7 +438,7 @@ main .section.centered-text.columns-container .default-content-wrapper p.button-
   margin: 0;
 }
 
-main .section.centered-text.columns-container .default-content-wrapper p {
+main .section.columns-container .columns.centered-text > div > div > * {
   text-align: center;
 }
 
