--- a/styles/styles.css
+++ b/styles/styles.css
@@ -879,6 +879,12 @@ main .section.centered-text .default-content-wrapper {
   text-align: center;
 }
 
+main .section.centered-text .default-content-wrapper p.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 main .centered-headings .default-content-wrapper > h1,
 main .centered-headings .default-content-wrapper > h2,
 main .centered-headings .default-content-wrapper > h3,
